Added built in section
-Added two towers
-Added road connections img

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
 
     <section class="contact bg-primary" id="contact">
       <div class="container">
-        <h2>We
-          <i class="fa fa-heart"></i>
-          new friends!</h2>
+        <h2>Built in Munich & Toronto</h2>
+		  <img src="img/munich.jpg" style="max-width:30%;height:auto;" alt=""/>
+		  <img src="img/toronto.jpg" style="max-width:30%;height:auto;" alt="">
       </div>
     </section>
 
