--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
-            <h2 class="section-heading">Test it out yourself!</h2>
-            <p>Our app is available for Android! Visit the GitHub repo to get started!</p>
+            <h2 class="section-heading" style="color: white;">Test it out yourself!</h2>
+            <p style="color: white;">Our app is available for Android! Visit the GitHub repo to get started!</p>
             <div class="badges">
               <a class="badge-link" href="https://github.com/DanielPollithy/flashwifi"><img src="img/GitHub-Mark-64px.png" alt=""></a>
             </div>
@@ -108,8 +108,8 @@
 	<section class="cta"id="purpose">
       <div class="cta-content">
         <div class="container">
-          <h2>Purpose.</h2>
-          <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
+          <h2>Connecting the World: Buy + Sell Mobile Data from your Android device via WiFi</h2>
+		  <h2 style="font-size: 30px">Find devices to pair and generate a WiFi hotspot. Secure payment transactions occur via the IOTA Tangle and Flash Channels.</h2>
         </div>
       </div>
       <div class="overlay"></div>
@@ -120,7 +120,7 @@
       <div class="container">
         <div class="section-heading text-center">
           <h2 style="color: #0649FC;">IOTA + Flash Channels + WiFi</h2>
-          <p class="text-muted">Check out what you can do with this app theme!</p>
+          <p class="text-muted">Free microtransactions - billed per unit of time (MB to be implemented in the future)!</p>
           <hr>
         </div>
         <div class="row">
@@ -176,7 +176,7 @@
       <div class="overlay"></div>
     </section>
 	
-	<section class="contact" id="usecases" style="background-color: #0649FC; color: #FFFFFF;">
+	<section class="contact" id="usecases" style="background-color: #0A3C86; color: #FFFFFF;">
       <div class="container">
         <h2>Use Cases</h2>
 			<div>
@@ -186,7 +186,7 @@
     </section>
 
     <section class="contact bg-primary" id="contact">
-      <div class="container" style="color: #0649FC;">
+      <div class="container" style="color: #FFFFFF;">
         <h2>Built in Munich & Toronto</h2>
 		  <img src="img/munich.jpg" style="max-width:30%;height:auto;" alt=""/>
 		  <img src="img/toronto.jpg" style="max-width:30%;height:auto;" alt="">
