--- a/index.html
+++ b/index.html
@@ -10,16 +10,6 @@
 
     <title>WiFiota</title>
 	
-	<!-- Sections 
-		Home
-		Download
-		Purpose
-		Features
-		Demo
-		Use Cases
-		Contact
-	-->
-
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -68,6 +58,9 @@
             </li>
 			<li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#useCasesFutureFeatures">Use Cases</a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#presentation">Presentation</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -202,7 +195,7 @@
 	
 	<section class="contact" id="useCasesFutureFeatures" style="background-color: #0A3C86; color: #FFFFFF;">
       <div class="container">
-        <h2>Use Cases & Potential Future Features</h2>
+        <h2 style="text-align: left">Use Cases & Potential Future Features</h2>
 			<div style="text-align: left">
 			<p>
 				<ul>
@@ -214,10 +207,21 @@
 					<br/>
 					<li><b>Hardware</b>: Custom hardware routers that sell connection access</li>
 				</ul>			
-			</p>
+			</p>			
 			</div>
       </div>
     </section>
+	
+	    <section class="presentation" id="presentation">
+      <div class="presentation-content">
+        <div class="container">
+			<h2>Presentation</h2>
+          <iframe  frameborder="0" width="550" height="400" src="https://prezi.com/view/CQuobPEIwQllIoEuww9D/embed" webkitallowfullscreen="1" mozallowfullscreen="1" allowfullscreen="1"></iframe>
+        </div>
+      </div>
+      <div class="overlay"></div>
+    </section>
+
 
     <section class="contact bg-primary" id="contact">
       <div class="container" style="color: #FFFFFF;">
