--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
         <div class="row">
           <div class="col-lg-4 my-auto">
-			<img src="img/Deposit.png" class="img-fluid" alt="">
+			<img src="img/WiFiota.gif" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 my-auto">
             <div class="container-fluid">
