--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <a class="nav-link js-scroll-trigger" href="#demo">Demo</a>
             </li>
 			<li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#useCasesFutureFeatures">Use Cases</a>
+              <a class="nav-link js-scroll-trigger" href="#useCases">Use Cases</a>
             </li>
 			<li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#presentation">Presentation</a>
@@ -104,8 +104,8 @@
 	<section class="cta"id="purpose">
       <div class="cta-content">
         <div class="container">
-          <h2>Connecting the World: Buy + Sell Mobile Data from your Android device via WiFi</h2>
-		  <h2 style="font-size: 30px">Find devices to pair and generate a WiFi hotspot. Secure payment transactions occur via the IOTA Tangle and Flash Channels.</h2>
+          <h2>Connecting the World: Buy + Sell Mobile Data from your Android Device via WiFi</h2>
+		  <h2 style="font-size: 30px">Find devices to pair with and generate a WiFi hotspot. Secure payment transactions occur via the IOTA Tangle and Flash Channels.</h2>
         </div>
       </div>
       <div class="overlay"></div>
@@ -136,7 +136,7 @@
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <h3>Private Testnet</h3>
-                    <p class="text-muted">WiFiota managed modified fast node with functionality to generate test funds</p>
+                    <p class="text-muted">WiFiota managed and modified fast node with functionality to generate test funds</p>
                   </div>
                 </div>
               </div>
@@ -177,7 +177,7 @@
         <h2>Flash Channels Integration</h2>
 			<div>
 			<p>An IOTA Flash Channel is established between two WiFiota users, after the WiFi connection between the devices has been established. Every minute of client data usage is associated with a token transfer in the channel.<p><br/>
-			<p>Signing a transfer signifies agreement to the billed amount. Limits are enforced via specified buy/sell min/max values set by each user. The equal funding of the channel ensures shared risk between both parties, insuring against a user leaving the channel early.<p><br/>
+			<p>Signing a transfer signifies agreement to pay the billed amount. Limits are enforced via specified buy/sell min/max values set by each user. The equal funding of the channel ensures shared risk between both parties, insuring against a user leaving the channel early.<p><br/>
 			<p>Checks are implemented to monitor if time sensitive constraints were not fulfilled, such as the channel not being funded, no peers, etc.</p><br/>
 			</div>
       </div>
@@ -193,9 +193,9 @@
       <div class="overlay"></div>
     </section>
 	
-	<section class="contact" id="useCasesFutureFeatures" style="background-color: #0A3C86; color: #FFFFFF;">
+	<section class="contact" id="useCases" style="background-color: #0A3C86; color: #FFFFFF;">
       <div class="container">
-        <h2 style="text-align: left">Use Cases & Potential Future Features</h2>
+        <h2 style="text-align: left">Use Cases</h2>
 			<div style="text-align: left">
 			<p>
 				<ul>
