--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 			<div style="text-align: left">
 			<p>
 				<ul>
-					<li><b>Data plan sharing & optimization</b>: Pay for what you need, sell remaining, buy more if needed</li>
+					<li><b>Data plan sharing &amp; optimization</b>: Pay for what you need, sell remaining, buy more if needed</li>
 					<br/>
 					<li><b>Travelers</b>: Easily accessible native cell network data connection. No currency conversion fees for payment</li>
 					<br/>
@@ -225,7 +225,7 @@
 
     <section class="contact bg-primary" id="contact">
       <div class="container" style="color: #FFFFFF;">
-        <h2 style="font-size: 20px">Built in Munich & Toronto</h2>
+        <h2 style="font-size: 20px">Built in Munich &amp; Toronto</h2>
 		  <img src="img/munich.jpg" style="max-width:30%;height:auto;" alt=""/>
 		  <img src="img/toronto.jpg" style="max-width:30%;height:auto;" alt="">
       </div>
