Added WiFiota Video

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <div class="demo-content">
         <div class="container">
 			<h2>Demo</h2>
-          <iframe width="700" height="394" src="https://www.youtube.com/embed/uNVJQCGxqb0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<iframe width="700" height="394" src="https://www.youtube.com/embed/Co46IZxoB4c?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
       <div class="overlay"></div>
